feat(driver, common): changed pagination method
changed pagination method
changed fields in list request
