# driver/internal/api/driver/v1/list_drivers.go
@@ -5,14 +5,31 @@ import (
 
 	driverv1 "github.com/escoutdoor/linko/common/pkg/proto/driver/v1"
 	"github.com/escoutdoor/linko/driver/internal/api/converter"
+	"github.com/escoutdoor/linko/driver/internal/pagination"
 )
 
 func (a *api) ListDrivers(ctx context.Context, req *driverv1.ListDriversRequest) (*driverv1.ListDriversResponse, error) {
-	drivers, err := a.driverService.ListDrivers(ctx, converter.ProtoListDriversRequestToListDriversParams(req))
+	in, err := converter.ProtoListDriversRequestToListDriversParams(req)
 	if err != nil {
 		return nil, err
 	}
 
+	drivers, err := a.driverService.ListDrivers(ctx, in)
+	if err != nil {
+		return nil, err
+	}
+
+	pageSize := int(in.PageSize)
+	var nextPageToken string
+	if len(drivers) > pageSize {
+		lastItem := drivers[pageSize]
+		nextPageToken = pagination.EncodeCursor(lastItem.ID, lastItem.CreatedAt)
+		drivers = drivers[:pageSize]
+	}
+
 	protoDrivers := converter.DriversToProtoDrivers(drivers)
-	return &driverv1.ListDriversResponse{Drivers: protoDrivers}, nil
+	return &driverv1.ListDriversResponse{
+		Drivers:       protoDrivers,
+		NextPageToken: nextPageToken,
+	}, nil
 }
